fix: Update table cell styling for better word wrapping and layout and update README.md

--- a/src/styles/abstracts/_placeholders.scss
+++ b/src/styles/abstracts/_placeholders.scss
@@ -41,7 +41,7 @@
 %table-cell {
   padding: 0.4rem 1rem;
   font-size: 95%;
-  white-space: nowrap;
+  word-break: break-word;
 }
 
 %link-hover {
